objects/CC_Error_Log__c.object
<CustomObject>
    <description>This is the custom object for logging errors with specified parameters.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_ID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <label>CC Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>